--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body, html {
         <span class="w3-text-white">Vennila 🔗 Sathrukkan</span>
     </div>
     <div class="w3-display-bottomright w3-center w3-padding-large">
-        <span class="w3-text-white">15 May 2022</span>
+        <span class="w3-text-white">Sunday, 15 May 2022</span>
     </div>
 </header>
 
@@ -64,10 +64,10 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MADURAI</span></h5>
-    <p>Medieval city - Temple complex at the town centre - Pandiyan kingdom 
+    <p>Medieval city - Temple complex at the town centre - Pandiyan kingdom<br> 
 
-This blog aims to give you suggestions on how you can make your stay a memorable one. As you are visiting Madurai in the mid of May, you can explore things from Mango to Jackfruit, from the scorching heat to a cold glass of Jigarthanda. Here is the list of things that we recommend you to do(places to eat and wander) in and around Madurai. 
-</p>
+        This blog aims to give you suggestions on how you can make your stay a memorable one. As you are visiting Madurai in the mid of May, you can explore things from Mango to Jackfruit, from the scorching heat to a cold glass of Jigarthanda. Here is the list of things that we recommend you to do(places to eat and wander) in and around Madurai. 
+    </p>
     <p>In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
