--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <!-- About Container -->
       <div class="w3-container" id="wander">
         <div class="w3-content" style="max-width: 700px">
-          <h5 class="w3-center w3-padding-64">
+          <h1 class="w3-center w3-padding-64">
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
-          </h5>
+          </h1>
           <p>
             Medieval city - Temple complex at the town centre - Pandiyan
             kingdom<br />
@@ -129,9 +129,9 @@
       <!-- Menu Container -->
       <div class="w3-container" id="eat">
         <div class="w3-content" style="max-width: 700px">
-          <h5 class="w3-center w3-padding-48">
+          <h1 class="w3-center w3-padding-48">
             <span class="w3-tag w3-wide">Places to eat</span>
-          </h5>
+          </h1>
 
           <div class="w3-row w3-center w3-card w3-padding">
             <a
@@ -195,7 +195,7 @@
           <!-- Breakfast Container -->
           <div id="breakfast" class="w3-container menu w3-padding-48 w3-card">
             <p class="w3-text-grey">
-              You can have a hearty breakfast in any vegetarian restaurant, like
+              You can have a hearty breakfast in any vegetarian restaurant, for example,
               Murugan idli shop. There isn't a particular specialty restaurant
               that we can recommend when it comes to breakfast in Madurai.
             </p>
@@ -266,9 +266,10 @@
           <div id="dinner" class="w3-container menu w3-padding-24 w3-card">
             <!-- Murugan Idly Container -->
             <div class="w3-panel w3-leftbar w3-border-green">
-              <h5>
-                Murugan Idli shop <span class="w3-tag w3-green">Veg</span>
-              </h5>
+              <h3>
+                Murugan Idli shop 
+              </h3>
+              <p class="w3-tag w3-green font-size-small">Veg</p>
               <p class="w3-text-grey">
                 As the name goes, this place serves one of the best idlis in the
                 world, along with a good choice of chutneys. <br />
@@ -292,7 +293,8 @@
 
             <!-- Konar Kadai Container -->
             <div class="w3-panel w3-leftbar w3-border-red">
-              <h5>Konar kadai<span class="w3-tag w3-red">Non.Veg</span></h5>
+              <h3>Konar kadai</h3>
+              <p class="w3-tag w3-red">Non.Veg</p>
               <p class="w3-text-grey">
                 There are two konar kadais: one in Simmakkal and the other in
                 Anna nagar. If you are closer to the wedding venue, you can
@@ -313,7 +315,8 @@
             <br />
             <!-- Kumar mess Container -->
             <div class="w3-panel w3-leftbar w3-border-red">
-              <h3>Kumar mess<span class="w3-tag w3-red">Non.Veg</span></h3>
+              <h3>Kumar mess</h3>
+              <p class="w3-tag w3-red">Non.Veg</p>
               <p class="w3-text-grey">
                 This place serves one of the best parottas in town.
               </p>
