--- a/index.html
+++ b/index.html
@@ -215,9 +215,10 @@
             <br />
             <!-- New Shri Ram mess Container -->
             <div class="w3-panel w3-leftbar w3-border-green">
-              <h5>
-                New Shri Ram mess <span class="w3-tag w3-green">Veg</span>
-              </h5>
+              <h3>
+                New Shri Ram mess 
+              </h3>
+              <p class="w3-tag w3-green">Veg</p>
               <p class="w3-text-grey">
                 The only option that you get here is a south Indian meal that is
                 served on a banana leaf. This place is best known for its Mor
@@ -242,7 +243,8 @@
             <br />
             <!-- Chandran Mess Container -- add nav -->
             <div class="w3-panel w3-leftbar w3-border-red">
-              <h5>Chandran mess <span class="w3-tag w3-red">Non.Veg</span></h5>
+              <h3>Chandran mess</h3>
+              <span class="w3-tag w3-red">Non.Veg</span>
               <p class="w3-text-grey">
                 There are no vegetarian food options available here. However,
                 you get a wide variety of chicken, mutton and seafood options.
