--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
           <div class="w3-row w3-center w3-card w3-padding">
             <a
               href="javascript:void(0)"
-              onclick="openMenu(event, 'snack');"
+              onclick="openMenu(event, 'streetfood');"
               id="myLink"
             >
-              <div class="w3-col s3 tablink">Snack</div>
+              <div class="w3-col s3 tablink">Street-food</div>
             </a>
             <a
               href="javascript:void(0)"
@@ -155,7 +155,7 @@
             </a>
           </div>
           <!-- Snack Container -->
-          <div id="snack" class="w3-container menu w3-padding-48 w3-card">
+          <div id="streetfood" class="w3-container menu w3-padding-48 w3-card">
             <div class="w3-col s12">
               <h5>
                 Bread Basket
