--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           <h1 class="w3-center w3-padding-48">
             <span class="w3-tag w3-wide">Places to eat</span>
           </h1>
+          <p>Welcome to the city that never sleeps(but don’t expect a nightlife). As the name suggests, there is no time when you can’t find a nice place for a cup of tea or a hot plate of parotta. Below is an extensive list of eateries that serve sumptuous food.</p>
 
           <div class="w3-row w3-center w3-card w3-padding">
             <a
@@ -156,42 +157,23 @@
           </div>
           <!-- Snack Container -->
           <div id="streetfood" class="w3-container menu w3-padding-48 w3-card">
-            <div class="w3-col s12">
-              <h5>
-                Bread Basket
-                <span class="w3-tag w3-green">Veg</span>
-              </h5>
+            <div class="w3-panel w3-leftbar w3-border-teal">
+              <h3>Famous Jigarthanda</h3>
+              <p class="w3-tag w3-teal">Must-Try!</p>
+              <p class="w3-text-grey">
+                Jigarthanda is a famous drink unique to Madurai. It is prepared using Milk, China grass, Sarsaparilla syrup and Ice-cream. 
+              </p>
+              <p>Time</p>
+              <p class="w3-text-grey">
+                Whenever you feel like indulging in a creamy cold dessert!
+              </p>
+              <p>Remarks</p>
+              <p class="w3-text-grey">
+                We would advise you to get it in a disposable cup to avoid the crowd and for better hygiene.
+              </p>
             </div>
-            <p class="w3-text-grey">
-              Assortment of fresh baked fruit breads and muffins 5.50
-            </p>
-            <br />
-            <h5>Honey Almond Granola with Fruits</h5>
-            <p class="w3-text-grey">
-              Natural cereal of honey toasted oats, raisins, almonds and dates
-              7.00
-            </p>
-            <br />
-
-            <h5>Belgian Waffle</h5>
-            <span class="w3-tag w3-red">Non-Veg</span>
-            <p class="w3-text-grey">
-              Vanilla flavored batter with malted flour 7.50
-            </p>
-            <br />
-
-            <h5>Scrambled eggs</h5>
-            <p class="w3-text-grey">
-              Scrambled eggs, roasted red pepper and garlic, with green onions
-              7.50
-            </p>
-            <br />
-
-            <h5>Blueberry Pancakes</h5>
-            <p class="w3-text-grey">
-              With syrup, butter and lots of berries 8.50
-            </p>
           </div>
+
           <!-- Breakfast Container -->
           <div id="breakfast" class="w3-container menu w3-padding-48 w3-card">
             <p class="w3-text-grey">
@@ -222,9 +204,8 @@
               <p class="w3-text-grey">
                 The only option that you get here is a south Indian meal that is
                 served on a banana leaf. This place is best known for its Mor
-                kulambu and medu vada. <br /><span class="material-icons">
-                  place
-                </span>
+                kulambu and medu vada. <br />
+                <span class="material-icons">place</span>
                 <a
                   class="link-underline"
                   href="https://goo.gl/maps/gSGDr7nC4CMdjnQP8"
@@ -261,11 +242,16 @@
                 acknowledgement and will charge you for it, so order meat from
                 the “what to buy” section instead.
               </p>
+              <span class="material-icons"> place </span>
+              <a class="link-underline" href="https://goo.gl/maps/"
+                >take me there - link broken!
+              </a>
             </div>
           </div>
 
           <!-- dinner Container -->
           <div id="dinner" class="w3-container menu w3-padding-24 w3-card">
+            <p class="w3-text-grey">Any roadside parotta shop serves good parottas. If you see a few people in the shop you are rest assured that the food is nice.</p>
             <!-- Murugan Idly Container -->
             <div class="w3-panel w3-leftbar w3-border-green">
               <h3>
@@ -313,6 +299,10 @@
                 Please note that the Simmakkal branch may be a bit noisy and
                 crowded.
               </p>
+              <span class="material-icons"> place </span>
+              <a class="link-underline" href="https://goo.gl/maps/"
+                >take me there - link broken!
+              </a>
             </div>
             <br />
             <!-- Kumar mess Container -->
@@ -331,6 +321,10 @@
               </p>
               <p>Remarks</p>
               <p class="w3-text-grey">ipsum</p>
+              <span class="material-icons"> place </span>
+              <a class="link-underline" href="https://goo.gl/maps/"
+                >take me there - link broken!
+              </a>
             </div>
           </div>
         </div>
