--- a/index.html
+++ b/index.html
@@ -157,21 +157,103 @@
           </div>
           <!-- Snack Container -->
           <div id="streetfood" class="w3-container menu w3-padding-48 w3-card">
-            <div class="w3-panel w3-leftbar w3-border-teal">
-              <h3>Famous Jigarthanda</h3>
-              <p class="w3-tag w3-teal">Must-Try!</p>
-              <p class="w3-text-grey">
-                Jigarthanda is a famous drink unique to Madurai. It is prepared using Milk, China grass, Sarsaparilla syrup and Ice-cream. 
-              </p>
-              <p>Time</p>
-              <p class="w3-text-grey">
-                Whenever you feel like indulging in a creamy cold dessert!
-              </p>
-              <p>Remarks</p>
-              <p class="w3-text-grey">
-                We would advise you to get it in a disposable cup to avoid the crowd and for better hygiene.
-              </p>
-            </div>
+            <!-- Jigarthanda container -->
+    <div class="w3-panel w3-leftbar w3-border-teal">
+      <h3>Famous Jigarthanda</h3>
+      <p class="w3-tag w3-teal">Must try</p>
+      <p class="w3-text-grey">
+        Jigarthanda is a famous drink unique to Madurai. It is prepared using Milk, China grass, Sarsaparilla syrup and Ice-cream.  <br />
+        <p>When to visit?</p>
+        <p class="w3-text-grey">
+          Whenever you feel like indulging in a creamy cold dessert!
+        </p>
+        <p>Remarks</p>
+        <p class="w3-text-grey">We would advise you to get it in a disposable cup to avoid the crowd and for better hygiene.
+          <p>Location</p>
+        <span class="material-icons">place</span>
+        <a class="link-underline" href="https://goo.gl/maps/amTXgzwGhCrNrruw8"
+          >take me there!
+        </a>
+        <br />
+        <span class="material-icons"> language </span>
+        <a
+          class="link-underline"
+          href="http://www.famousjigarthanda.com/"
+          >official website
+        </a>
+      </p>
+    </div>
+        <br />
+    <!-- Vishalam coffee container -->
+    <div class="w3-panel w3-leftbar w3-border-grey">
+      <h3>New Visalam coffee shop</h3>
+      <p class="w3-text-grey">
+        Fondly called bodhai(doped) coffee.  <br />
+        <p>When to visit?</p>
+        <p class="w3-text-grey">
+          Available throughout the day. Recommended during evening tea time.
+        </p>
+        <p>Remarks</p>
+        <p class="w3-text-grey">Get the coffee in a disposable cup for better hygiene.
+        <br />
+        <span class="material-icons">place</span>
+        <a class="link-underline" href="https://goo.gl/maps/2hzyVeu8Ai7rTP6F6"
+          >take me there!
+        </a>
+
+      </p>
+    </div>
+        <br />
+    <!-- Meenakshi Amman prasadham container -->
+    <div class="w3-panel w3-leftbar w3-border-grey">
+      <h3>Meenakshi Amman temple prasadam</h3>
+      <p class="w3-text-grey">
+        Meenakshi amman temple snack bar is known for the variety of snacks that it offers.  <br />
+        <p>When to visit?</p>
+        <p class="w3-text-grey">
+          During the temple operation hours.
+        </p>
+        <p>What to buy?</p>
+        <p class="w3-text-grey">Puliyodharai, Appam(Mildly sweet), Vadai, Laddu.
+
+        <p>Location</p>
+        <p class="w3-text-grey">
+          Ask for the prasadam stall inside the temple complex.
+        <br />
+        <span class="material-icons">place</span>
+        <a class="link-underline" href="https://goo.gl/maps/49agch3ZQnS7SnbH9"
+          >take me there!
+        </a>
+      </p>
+    </div>
+              <br />
+
+    <!-- Plate container -->
+    <div class="w3-panel w3-leftbar w3-border-grey">
+      <h3>Plate</h3>
+      <p class="w3-text-grey">
+        A chat version of south Indian egg bonda.  <br />
+        <p>When to visit?</p>
+        <p class="w3-text-grey">
+          Between 5:30PM to 6:15PM - Closed on Sundays
+        </p>
+        <p>What to buy?</p>
+        <p class="w3-text-grey">Plate(Served in half and full pates, but go with a full one), Vada, Bonda, Appam.
+  
+          <p>Remarks</p>
+          <p class="w3-text-grey">We would advise you to get it in a disposable cup to avoid the crowd and for better hygiene.
+          <br />
+          <p>Location</p>
+          <p class="w3-text-grey">
+            This is a roadside trolley vendor located somewhere approximately in the location given(KK 9th main road).
+          <br />
+        <span class="material-icons">place</span>
+        <a class="link-underline" href="https://goo.gl/maps/W6Z9rDhDoU9J13Dj7"
+          >take me there!
+        </a>
+      </p>
+    </div>
+                <br />  
           </div>
 
           <!-- Breakfast Container -->
