--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>W3.CSS Template</title>
+    <title>Temple Town Wedding</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -57,10 +57,10 @@
           <a href="#" class="w3-button w3-block w3-black">HOME</a>
         </div>
         <div class="w3-col s3">
-          <a href="#wander" class="w3-button w3-block w3-black">WANDER</a>
+          <a href="#eat" class="w3-button w3-block w3-black">EAT</a>
         </div>
         <div class="w3-col s3">
-          <a href="#eat" class="w3-button w3-block w3-black">EAT</a>
+          <a href="#wander" class="w3-button w3-block w3-black">WANDER</a>
         </div>
         <div class="w3-col s3">
           <a href="#wedding" class="w3-button w3-block w3-black">WEDDING</a>
@@ -93,36 +93,18 @@
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
           </h1>
           <p>
-            Medieval city - Temple complex at the town centre - Pandiyan
-            kingdom<br />
+            The medieval city of Madurai was the capital city in the Pandiyan kingdom and is now known for its historical monuments like Meenakshi Amman temple and Thirumalai nayakar mahal. The Meenakshi amman temple complex acted as the town centre during the Pandiyan reign and is now geographically and culturally situated at the heart of the city. Being a city with a healthy mix of ancient and the new, Madurai gives an unique experience to its visitors. 
+            <br />
+            <br />
+This blog aims to give you suggestions on how you can make your stay a memorable one. As you are visiting Madurai in the mid of May, you can explore things from Mango to Jackfruit, from the scorching heat to a cold glass of Jigarthanda. Here is the list of things that we recommend you to do(places to eat and wander) in and around Madurai. 
 
-            This blog aims to give you suggestions on how you can make your stay
-            a memorable one. As you are visiting Madurai in the mid of May, you
-            can explore things from Mango to Jackfruit, from the scorching heat
-            to a cold glass of Jigarthanda. Here is the list of things that we
-            recommend you to do(places to eat and wander) in and around Madurai.
           </p>
-          <p>
-            In addition to our full espresso and brew bar menu, we serve fresh
-            made-to-order breakfast and lunch sandwiches, as well as a selection
-            of sides and salads and other good stuff.
-          </p>
-          <div class="w3-panel w3-leftbar w3-light-grey">
-            <p>
-              <i
-                >"Use products from nature for what it's worth - but never too
-                early, nor too late." Fresh is the new sweet.</i
-              >
-            </p>
-            <p>Chef, Coffeeist and Owner: Liam Brown</p>
-          </div>
+
           <img
             src="/w3images/coffeeshop.jpg"
             style="width: 100%; max-width: 1000px"
             class="w3-margin-top"
           />
-          <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-          <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
         </div>
       </div>
 
@@ -155,7 +137,7 @@
               <div class="w3-col s3 tablink">Dinner</div>
             </a>
           </div>
-          <!-- Snack Container -->
+          <!-- street Container -->
           <div id="streetfood" class="w3-container menu w3-padding-48 w3-card">
             <!-- roadside food container -->
     <div class="w3-panel w3-leftbar w3-border-teal">
@@ -178,7 +160,7 @@
             <!-- Jigarthanda container -->
     <div class="w3-panel w3-leftbar w3-border-teal">
       <h3>Famous Jigarthanda</h3>
-      <p class="w3-tag w3-teal">Must try</p>
+      <p class="w3-tag w3-teal">Must try!</p>
       <p class="w3-text-grey">
         Jigarthanda is a famous drink unique to Madurai. It is prepared using Milk, China grass, Sarsaparilla syrup and Ice-cream.  <br />
         <p>When to visit?</p>
@@ -190,21 +172,22 @@
           <p>Location</p>
         <span class="material-icons">place</span>
         <a class="link-underline" href="https://goo.gl/maps/amTXgzwGhCrNrruw8"
-          >take me there!
+          >take me to main branch!
         </a>
         <br />
         <span class="material-icons"> language </span>
         <a
           class="link-underline"
           href="http://www.famousjigarthanda.com/"
-          >official website
+          >official website - find a nearby branch!
         </a>
       </p>
     </div>
         <br />
     <!-- Vishalam coffee container -->
-    <div class="w3-panel w3-leftbar w3-border-grey">
+    <div class="w3-panel w3-leftbar w3-border-teal">
       <h3>New Visalam coffee shop</h3>
+      <p class="w3-tag w3-teal">Must try!</p>
       <p class="w3-text-grey">
         Fondly called bodhai(doped) coffee.  <br />
         <p>When to visit?</p>
@@ -373,8 +356,8 @@
                 Jigarthanda) here for a post dinner dessert.
               </p>
               <span class="material-icons"> place </span>
-              <a class="link-underline" href="https://goo.gl/maps/"
-                >take me there - link broken!
+              <a class="link-underline" href=" https://goo.gl/maps/NaWsRQwM3PJCwnY77"
+                >take me there!
               </a>
             </div>
             <br />
@@ -383,6 +366,7 @@
             <div class="w3-panel w3-leftbar w3-border-red">
               <h3>Konar kadai</h3>
               <p class="w3-tag w3-red">Non.Veg</p>
+              <p class="w3-tag w3-red">Must try!</p>
               <p class="w3-text-grey">
                 There are two konar kadais: one in Simmakkal and the other in
                 Anna nagar. If you are closer to the wedding venue, you can
@@ -400,8 +384,13 @@
                 crowded.
               </p>
               <span class="material-icons"> place </span>
-              <a class="link-underline" href="https://goo.gl/maps/"
-                >take me there - link broken!
+              <a class="link-underline" href="https://g.page/konar-mess-madurai?share"
+                >take me to Simmakal branch!
+              </a>
+              <br />
+              <span class="material-icons"> place </span>
+              <a class="link-underline" href="https://goo.gl/maps/Nba6MDqa8Zjt3SvG6"
+                >take me to Anna Nagar branch!
               </a>
             </div>
             <br />
@@ -414,16 +403,31 @@
               </p>
               <p>What to buy?</p>
               <p class="w3-text-grey">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                iste modi suscipit nobis distinctio vero aliquam. Cum nesciunt
-                accusantium veritatis id, nobis sapiente atque in consequatur
-                odit omnis officia sequi?
+                Parotta, Kothu parota. Avoid Kari dosai if you have payed a visit to Konar kadai.
               </p>
               <p>Remarks</p>
-              <p class="w3-text-grey">ipsum</p>
+              <p class="w3-text-grey">Good food! also popular for lunch!</p>
               <span class="material-icons"> place </span>
-              <a class="link-underline" href="https://goo.gl/maps/"
-                >take me there - link broken!
+              <a class="link-underline" href="https://goo.gl/maps/ceMLL3BqXgULcPja9"
+                >take me there!
+              </a>
+            </div>
+            <br />
+
+            <!-- Gateway Taj Container -->
+            <div class="w3-panel w3-leftbar w3-border-teal">
+              <h3>Vista Restaurant - Gateway Taj Hotel</h3>
+              <p class="w3-tag w3-teal">Highly Recommended!</p>
+              <p class="w3-text-grey">
+                Sitting on the top of Pasumalai Hill, The Gateway Hotel stretches over 62 acres of peaceful landscaped gardens. If you are in a mood to loosen up your purse strings and have a good time, this is the place to go. Food and drinks are much recommended and the view is spectacular. If you don’t have the time for dinner, you can at least pay a visit for a cup of tea or an early breakfast. You can clearly see how much we love the view. It would cost you around 1.5k per person for food and further 1k for drinks. <strong class="w3-text-black">Prior table reservation may be required for lunch or dinner.</strong>
+              </p>
+              
+              </p>
+              <p>Remarks</p>
+              <p class="w3-text-grey">Got a lot of peacocks! you may be lucky to spot a few!!</p>
+              <span class="material-icons"> place </span>
+              <a class="link-underline" href="https://goo.gl/maps/PrdTtdPRcvH8TdSW6"
+                >take me there!
               </a>
             </div>
           </div>
@@ -501,13 +505,11 @@
     <!-- Footer -->
     <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
       <p>
-        Powered by
+        Authors
         <a
-          href="https://www.w3schools.com/w3css/default.asp"
-          title="W3.CSS"
-          target="_blank"
+          href="https://www.ottostore.com/"
           class="w3-hover-text-green"
-          >w3.css</a
+          >The Last Jedis</a
         >
       </p>
     </footer>
