--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
               onclick="openMenu(event, 'streetfood');"
               id="myLink"
             >
-              <div class="w3-col s3 tablink">Street-food</div>
+              <div class="w3-col s4 tablink">Street-food</div>
             </a>
             <a
               href="javascript:void(0)"
@@ -134,7 +134,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
               <div class="w3-col s3 tablink">Lunch</div>
             </a>
             <a href="javascript:void(0)" onclick="openMenu(event, 'dinner');">
-              <div class="w3-col s3 tablink">Dinner</div>
+              <div class="w3-col s2 tablink">Dinner</div>
             </a>
           </div>
           <!-- street Container -->
@@ -433,6 +433,29 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           </div>
         </div>
       </div>
+
+      <!-- Blog entry -->
+  <div class="w3-card-4 w3-margin w3-white">
+    <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+      <div class="w3-container">
+        <h3><b>BLOG ENTRY</b></h3>
+        <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+      </div>
+  
+      <div class="w3-container">
+        <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
+          tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <div class="w3-row">
+          <div class="w3-col m8 s12">
+            <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+          </div>
+          <div class="w3-col m4 w3-hide-small">
+            <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- END BLOG ENTRIES -->
 
       <!-- Contact/Area Container -->
       <div class="w3-container" id="wedding" style="padding-bottom: 32px">
