--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         text-decoration: underline;
       }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HRWZ906TXK"></script>
+    <script>
+     window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HRWZ906TXK');
+    </script>
   </head>
   <body>
     <!-- Links (sit on top) -->
@@ -140,16 +149,16 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <!-- street Container -->
           <div id="streetfood" class="w3-container menu w3-padding-48 w3-card">
             <!-- roadside food container -->
-    <div class="w3-panel w3-leftbar w3-border-teal">
+            <div class="w3-panel w3-leftbar w3-border-teal">
         
-      <h3>Roadside vendors around the temple</h3>
-      <p class="w3-tag w3-teal">Must try!</p>
-      <p class="w3-text-grey">
-        You can spot a lot of roadside vendors around the temple selling various stuff such as fresh fruits, kadala and other snacks.  <br />
-        <p>When to visit?</p>
-        <p class="w3-text-grey">
-          from 6:00 pm to 8:30 pm
-        </p>
+              <h3>Roadside vendors around the temple</h3>
+              <p class="w3-tag w3-teal">Must try!</p>
+              <p class="w3-text-grey">
+                 You can spot a lot of roadside vendors around the temple selling various stuff such as fresh fruits, kadala and other snacks.  <br />
+              <p>When to visit?</p>
+              <p class="w3-text-grey">
+            from 6:00 pm to 8:30 pm
+              </p>
         <p>what to buy?</p>
         <p class="w3-text-grey">Jackfruit, boiled peanuts, thennanguruthu(coconut stem), green mangoes, Saurashtra vada vendors (try mullumurugai vadai or Poli)etc.,
 </p>
@@ -183,7 +192,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         </a>
       </p>
     </div>
-        <br />
+    <br />
     <!-- Vishalam coffee container -->
     <div class="w3-panel w3-leftbar w3-border-teal">
       <h3>New Visalam coffee shop</h3>
@@ -435,17 +444,17 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       </div>
 
       <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
-      <div class="w3-container">
-        <h3><b>BLOG ENTRY</b></h3>
-        <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-      </div>
+      <div class="w3-card-4 w3-margin w3-white">
+        <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+        <div class="w3-container">
+          <h3><b>BLOG ENTRY</b></h3>
+          <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+        </div>
   
-      <div class="w3-container">
-        <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
+        <div class="w3-container">
+          <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
           tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <div class="w3-row">
+          <div class="w3-row">
           <div class="w3-col m8 s12">
             <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
           </div>
@@ -455,7 +464,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         </div>
       </div>
     </div>
-  <!-- END BLOG ENTRIES -->
+    <!-- END BLOG ENTRIES -->
 
       <!-- Contact/Area Container -->
       <div class="w3-container" id="wedding" style="padding-bottom: 32px">
