--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Add a background color and large text to the whole page -->
     <div class="w3-sand w3-grayscale w3-large">
       <!-- About Container -->
-      <div class="w3-container" id="wander">
+      <div class="w3-container">
         <div class="w3-content" style="max-width: 700px">
           <h1 class="w3-center w3-padding-64">
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
@@ -444,7 +444,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       </div>
 
       <!-- Blog entry -->
-      <div class="w3-card-4 w3-margin w3-white">
+      <div class="w3-card-4 w3-margin w3-white"  id="wander">
         <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
         <div class="w3-container">
           <h3><b>BLOG ENTRY</b></h3>
