--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     <!-- Add a background color and large text to the whole page -->
     <div class="w3-sand w3-grayscale w3-large">
       <!-- About Container -->
-      <div class="w3-container">
+      <div class="w3-container" id="about">
         <div class="w3-content" style="max-width: 700px">
           <h1 class="w3-center w3-padding-64">
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
           </h1>
-          <p>
+          <p style="text-align: justify;">
             The medieval city of Madurai was the capital city in the Pandiyan kingdom and is now known for its historical monuments like Meenakshi Amman temple and Thirumalai nayakar mahal. The Meenakshi amman temple complex acted as the town centre during the Pandiyan reign and is now geographically and culturally situated at the heart of the city. Being a city with a healthy mix of ancient and the new, Madurai gives an unique experience to its visitors. 
             <br />
             <br />
@@ -443,28 +443,35 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         </div>
       </div>
 
-      <!-- Blog entry -->
-      <div class="w3-card-4 w3-margin w3-white"  id="wander">
-        <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
-        <div class="w3-container">
-          <h3><b>BLOG ENTRY</b></h3>
+      <!-- Wander Container -->
+      <div class="w3-container"  id="wander">
+        <div class="w3-content"style="max-width: 700px;">
+          <h1 class="w3-center w3-padding-64">
+            <span class="w3-tag w3-wide">Where to Wander</span>
+          </h1>
+        
+        <!-- Meenakshi amman Temple container-->
+          <div class="w3-row w3-center w3-card w3-padding">
+          <div class="w3-left-align" style="text-align: justify;">
+          <h3><b>Meenakshi Amman Temple area</b></h3>
+          <span class="material-icons"> place </span>
+              <p class="w3-text-grey"
+                >Recommended time : 5-9pm 
+              </p>
           <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-        </div>
+        <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
   
-        <div class="w3-container">
-          <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-          tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-          <div class="w3-row">
-          <div class="w3-col m8 s12">
-            <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-          </div>
-          <div class="w3-col m4 w3-hide-small">
-            <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
-          </div>
-        </div>
+          <p>
+            Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
+          tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+          </p>
+            </div>
+      </div>
+      <!-- Temple container ends-->>
       </div>
     </div>
-    <!-- END BLOG ENTRIES -->
+    <br />
+    <br />
 
       <!-- Contact/Area Container -->
       <div class="w3-container" id="wedding" style="padding-bottom: 32px">
