--- a/index.html
+++ b/index.html
@@ -454,12 +454,11 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Meenakshi Amman Temple area</b></h3>
-          <span class="material-icons"> place </span>
+          <span class="material-icons"> schedule </span>
               <p class="w3-text-grey"
-                >Recommended time : 5-9pm 
+                >Recommended time : after 5pm. amy take around 2-3 hours
               </p>
-          <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
-        <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+        <img src="static/meenakshi-temple-3.jpeg" alt="meenakshi temple" style="width:100%">
   
           <p>
             Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
