--- a/index.html
+++ b/index.html
@@ -455,21 +455,132 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Meenakshi Amman Temple area</b></h3>
           <span class="material-icons"> schedule </span>
-              <p class="w3-text-grey"
-                >Recommended time : after 5pm. amy take around 2-3 hours
-              </p>
+              <span class="w3-text-grey"
+                >Recommended time : after 5pm. would take around 2-3 hours
+              </span>
         <img src="static/meenakshi-temple-3.jpeg" alt="meenakshi temple" style="width:100%">
-  
+              
+          <br />
+          <br />
           <p>
-            Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-          tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
+            Though it's a bit crowded, we recommend you to visit in the evening to experience the bustling life of the city. The streets around the temple are named after the month names of the Tamil calendar, starting with chithirai.
+            </br />
+            <br />  
+            Don’t forget to visit these following places when you visit the temple:
+ 
+              <ul class="w3-ul">
+                <li>Aayiram kaal mandapam - Located after entering through the west gate</li>
+                <li>Pond - Located in the westside inside the temple</li>
+                <li>Snack stall - Ask temple employee for directions</li>
+                <li>Pudhu mandapam - Outside the complex - sells things like craft goods, tunics, cheap ornaments etc.,</li>
+                <li>Walk along the chithirai streets(vehicle free area)</li>
+                <li>Refer to street food section for food suggestions and consider a walk to Thirumalai nayakar mahal</li>
+              </ul>
           </p>
             </div>
       </div>
-      <!-- Temple container ends-->>
+      <br />
+
+      <!-- Temple container ends-->
+              <!-- Azhgar Koyil area container-->
+          <div class="w3-row w3-center w3-card w3-padding">
+          <div class="w3-left-align" style="text-align: justify;">
+          <h3><b>Azhagar kovil area</b></h3>
+          <span class="material-icons"> schedule </span>
+              <span class="w3-text-grey"
+              > 4-5 hours including the journey from Madurai(Early mornings recommended)
+              </span>
+        <img src="static/azhagar-kovil.jpeg" alt="Azhagar temple" style="width:100%">
+          <br />
+          <br />
+          <p>
+           you could start as early as 5 in the morning to enjoy a trek in the hills.
+           <br />
+            <br />  
+           Things to see:
+              <br />
+              <ul class="w3-ul">
+                <li>Kall azhagar temple located at the base of the hill</li>
+                <li>Pazhamudhir cholai(Murugan temple) on top of the hill</li>
+                <li>a few monkeys</li>
+                <li>Stop for a snack or lunch at Hawa valley(20 min detour)</li>
+              </ul>
+              <br />
+                If you have more time to spend, visit hotel kadambavanam (It has a good view) or drive to Sirumalai
+          </p>
+            </div>
+      </div>
+      <br />
+      <!-- Azhagar koyil container ends-->
+
+       <!-- Thirumalai Nayakar Mahal container-->
+          <div class="w3-row w3-center w3-card w3-padding">
+          <div class="w3-left-align" style="text-align: justify;">
+          <h3><b>Thirumalai Nayakkar mahal</b></h3>
+          <span class="material-icons"> schedule </span>
+              <span class="w3-text-grey"
+              > 9 am - 8:30 pm (breaks 1-1:30 pm, 5-6 pm)
+              </span>
+        <img src="static/tirumalai-nayakar.jpeg" alt="mahal" style="width:100%">
+          <br />
+          <br />
+          <p>
+           This architectural wonder is another important historic site that was constructed in the early 17th century. The huge darbar halls with humongous pillars is a pleasure to watch. Director Maniratnam ihas patronised this placeand has featured in movies such movies as Guru, Bombay and Iruvar.
+           The light and sound show is recommended. <b>We would suggest you to wear mosquito repellents.</b>    
+          </p>
+          <br />
+                  <img src="static/tirumalai-nightview.jpeg" alt="mahal" style="width:100%">
+
+            </div>
+      </div>
+      <br />
+      <!-- TNM container ends-->
+
+
+      <!-- Thiruparankundram container-->
+          <div class="w3-row w3-center w3-card w3-padding">
+          <div class="w3-left-align" style="text-align: justify;">
+          <h3><b>Thiruparankundram</b></h3>
+          <span class="material-icons"> schedule </span>
+              <span class="w3-text-grey"
+              > 8 am - 12:30 pm and 4:00 - 7:30 pm
+              </span>
+        <img src="static/thiruparankundram.jpeg" alt="mahal" style="width:100%">
+          <br />
+          <br />
+          <p>
+            The temple is built in rock-cut architecture and believed to have been built by the Pandyas during the 6th century.
+          </p>
+
+            </div>
+      </div>
+      <br />
+      <!-- Thiruparankundram container ends-->
+
+      <!-- Mariamman Teppakulam container-->
+          <div class="w3-row w3-center w3-card w3-padding">
+          <div class="w3-left-align" style="text-align: justify;">
+          <h3><b>Mariamman Teppakulam</b></h3>
+          <span class="material-icons"> schedule </span>
+              <span class="w3-text-grey"
+              > 9:00 am - 6:00 pm
+              </span>
+        <img src="static/mariamman-teppakulam.jpeg" alt="mahal" style="width:100%">
+          <br />
+          <br />
+          <p>
+            The largest Tank in Tamil Nadu. Take a boat ride to the temple surrounded by water and savour the street food alongside. 
+            </p>
+
+            </div>
+      </div>
+      <br />
+      <!-- VMA container ends-->
+
+
+
       </div>
     </div>
-    <br />
     <br />
 
       <!-- Contact/Area Container -->
