eatery almost done v9

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           </p>
 
           <img
-            src="/w3images/coffeeshop.jpg"
+            src="static/nandi.jpeg"
             style="width: 100%; max-width: 1000px"
             class="w3-margin-top"
           />
