eatery almost done v11

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <br />
           <br />
           <p>
-            This architectural wonder is another important historic site that was constructed in the early 17th century. The huge darbar halls with humongous pillars is a pleasure to watch. Director Maniratnam ihas patronised this place and has featured it in such movies as Guru, Bombay and Iruvar.
+            This architectural wonder is another important historic site that was constructed in the early 17th century. The huge darbar halls with humongous pillars is a pleasure to watch. Director Maniratnam has patronised this place and has featured it in such movies as Guru, Bombay and Iruvar.
             The sound and light show is recommended. <strong>We would suggest you to wear mosquito repellents.</strong>    
           </p>
           <br />
